Major memory issue, but recursion works!

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "downlevelIteration": true,
     "module": "commonjs",
     "esModuleInterop": true,
     "noImplicitAny": true,
